# HRS--Gomoku-Game-with-AiNex

./: README.md  README_Final_Project.md
ainex_controller/: package.xml  setup.py
ainex_controller/ainex_controller/: ainex_arm_controller.py  ainex_arm_controller_topic.py  ainex_hand_controller.py  ainex_minimal_fsm.py  ainex_model.py  ainex_twohands_control_node.py
ainex_controller/install/: local_setup.sh  setup.sh
ainex_controller/log/: latest_build
ainex_motion/: setup.py
ainex_motion/ainex_motion/: aruco_follower_node.py  joint_controller.py  joint_visualization_node.py
ainex_social_robot/: package.xml  setup.cfg
ainex_social_robot/ainex_social_robot/: combine_node.py  wave_hand_node.py
ainex_social_robot/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ainex_social_robot/install/ainex_social_robot/share/ainex_social_robot/: package.bash  package.zsh
ainex_social_robot/install/ainex_social_robot/share/ainex_social_robot/launch/: social_pipeline.launch.py
ainex_social_robot/launch/: social_pipeline.launch.py
ainex_social_robot/log/: latest_build
ainex_vision/: README.md  setup.py
ainex_vision/ainex_vision/: arrayoutput.py  aruco_board_location.py  board_to_base.py  calibrate_camera.py  camera.yaml  (+6 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
servo_service/: CMakeLists.txt
src/: README_T6.md  README_T7.md  frames_2025-12-07_15.32.37.gv
src/gomoku_visualization/: README.md  package.xml  setup.cfg  setup.py
src/gomoku_visualization/gomoku_visualization/: gomoku_visualizer_node.py
src/gomoku_visualization/gomoku_visualization/ui/: renderer.py  theme.py
(+465 files in other folders)
