<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ainex_social_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hrs2025@todo.todo">hrs2025</maintainer>
  <license>TODO: License declaration</license>

  <depend>rcply</depend>
  <depend>ainex_motion</depend>
  <depend>ainex_vision</depend>
  <depend>sensor_msgs</depend>
  <depend>servo_service</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
